--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jrc03c/guidedtrack-demos#readme",
   "dependencies": {
+    "@jrc03c/js-math-tools": "^0.0.41",
     "katex": "^0.12.0"
   },
   "devDependencies": {
